removed function create_table1

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -20,7 +20,7 @@
 </html>
 
 
-<!-- <script>
+<script>
     // Assuming 'data' variable contains the JSON data
     d3.json("/fetch_data_for_d3").then(function(data) {
         var width = 500;
@@ -64,7 +64,7 @@
             .attr("text-anchor", "middle")
             .attr("fill", "black");
     });
-</script> -->
+</script>
 
 </body>
 </html>
