added an upload button to import log files also created a backend route in Flask for file uploads

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js"></script>
 </head>
 <body>
+    
+<a href="{{ url_for('upload_json') }}" class="upload-button">Upload JSON File</a>
+
     <header>Quasik</header>
     <div id="title">Error Management Dashboard</div>
     <div class="container">
