--- a/Flask/static/styles.css
+++ b/Flask/static/styles.css
@@ -132,3 +132,39 @@ text {
 *, *:before, *:after {
     box-sizing: border-box; /* Ensures padding is included in width/height */
 }
+
+/* Styling for the login page */ 
+
+.upload-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 300px;
+    margin: auto;
+}
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: #4CAF50;
+    display: inline-block;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: #45a049;
+}
